# Calculadora-Custo-Funcionario

./: app.py  teste_streamlit.py
app/: app.py  calc_custo_func.py  pyproject.toml
